// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MainApp dynamically 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
       Click
    </button>
  </div>
  <div>
    loading...
  </div>
  <button
    onClick={[Function]}
  >
     toggle
  </button>
  <Hello />
  <Memo()
    increment={[Function]}
  />
  <div>
    0
  </div>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      value=""
    />
  </form>
  <div
    className="expenses"
  >
    <ListItem
      className="hello"
      description="Hello"
      id={1}
      key="1"
    />
    <ListItem
      className="hello"
      description="Testing"
      id={2}
      key="2"
    />
  </div>
</div>
`;

exports[`test result at class expenses 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
       Click
    </button>
  </div>
  <div>
    loading...
  </div>
  <button
    onClick={[Function]}
  >
     toggle
  </button>
  <Hello />
  <Memo()
    increment={[Function]}
  />
  <div>
    0
  </div>
  <form
    onSubmit={[Function]}
  >
    <input
      name="text"
      onChange={[Function]}
      value=""
    />
  </form>
  <div
    className="expenses"
  >
    <p>
      Nothing
    </p>
  </div>
</div>
`;
